--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    height: 700px;
+    
+
 }
+
+.form-title{
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.level{
+    text-align: center
+}
+
+textarea{
+    width: 100%;
+    height: 400px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
